--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -333,6 +333,54 @@ workers:
       - key: ENABLE_METRICS
         value: "false"
         scope: RUN_TIME
+jobs:
+  - name: seed-demo-data
+    github:
+      repo: YOUR_GITHUB_ORG/bank-of-anthos-codex-app-platform
+      branch: main
+      deploy_on_push: false
+    source_dir: .
+    dockerfile_path: ops/seed/Dockerfile
+    instance_count: 1
+    instance_size_slug: basic-xxs
+    kind: POST_DEPLOY
+    envs:
+      - key: SEED_ON_DEPLOY
+        value: "false"
+        scope: RUN_TIME
+      - key: LOCAL_ROUTING_NUM
+        value: "883745000"
+        scope: RUN_TIME
+      - key: ACCOUNTS_DB_HOST
+        value: ${accountsdb.HOSTNAME}
+        scope: RUN_TIME
+      - key: ACCOUNTS_DB_PORT
+        value: ${accountsdb.PORT}
+        scope: RUN_TIME
+      - key: ACCOUNTS_DB_USER
+        value: ${accountsdb.USERNAME}
+        scope: RUN_TIME
+      - key: ACCOUNTS_DB_PASSWORD
+        value: ${accountsdb.PASSWORD}
+        scope: RUN_TIME
+      - key: ACCOUNTS_DB_NAME
+        value: accountsdb
+        scope: RUN_TIME
+      - key: LEDGER_DB_HOST
+        value: ${ledgerdb.HOSTNAME}
+        scope: RUN_TIME
+      - key: LEDGER_DB_PORT
+        value: ${ledgerdb.PORT}
+        scope: RUN_TIME
+      - key: LEDGER_DB_USER
+        value: ${ledgerdb.USERNAME}
+        scope: RUN_TIME
+      - key: LEDGER_DB_PASSWORD
+        value: ${ledgerdb.PASSWORD}
+        scope: RUN_TIME
+      - key: LEDGER_DB_NAME
+        value: ledgerdb
+        scope: RUN_TIME
 databases:
   - name: accountsdb
     engine: PG
