--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ env:
   GITHUB_BRANCH: ${{ github.ref_name || 'main' }}
   ACCOUNTS_DB_NAME: ${{ vars.ACCOUNTS_DB_NAME || 'accountsdb' }}
   LEDGER_DB_NAME: ${{ vars.LEDGER_DB_NAME || 'ledgerdb' }}
+  SEED_ON_DEPLOY: ${{ vars.SEED_ON_DEPLOY || 'false' }}
 
 jobs:
   deploy:
@@ -34,6 +35,7 @@ jobs:
           GITHUB_BRANCH: ${{ env.GITHUB_BRANCH }}
           ACCOUNTS_DB_NAME: ${{ env.ACCOUNTS_DB_NAME }}
           LEDGER_DB_NAME: ${{ env.LEDGER_DB_NAME }}
+          SEED_ON_DEPLOY: ${{ env.SEED_ON_DEPLOY }}
         run: |
           python - <<'PY'
           import os
